src/user.css
/* ... */
.main-userWidget-displayName,
.main-userWidget-chevron {
  display: none !important;
}

/* menus */

div#context-menu::before,
.main-contextMenu-menu::before {
  content: '';
  z-index: -1;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--border-radius-1);
  backdrop-filter: blur(35px) saturate(3.5);
  background-image: url('https://nimsandu.github.io/spicetify-bloom/assets/noise/noise_context_menu.png');
}

div#context-menu > .main-contextMenu-menu::before,
div#context-menu > .main-userWidget-dropDownMenu::before,
.main-userWidget-dropDownMenu > .main-contextMenu-menu::before {
  display: none;
}

.yxf_6IsQEmHjijEBUMTP:focus,
.yxf_6IsQEmHjijEBUMTP:hover,
.yxf_6IsQEmHjijEBUMTP.queue-tabBar-active {
  border-radius: var(--border-radius-1) !important;
  color: var(--spice-text) !important;
}

.main-contextMenu-menu,
.main-contextMenu-tippy,
.main-devicePicker-tooltip {
  background-color: rgba(var(--spice-rgb-card), 0.8) !important;
}

.main-contextMenu-filterPlaylistSearchContainer {
  height: auto;
}

.main-contextMenu-menuItemButton,
.main-userWidget-dropDownMenuItemButton {
  border-radius: var(--border-radius-3);
  color: var(--spice-text) !important;
  height: 32px;
  padding-left: 8px;
}

.main-contextMenu-disabled {
  color: var(--spice-subtext) !important;
}

.main-contextMenu-menuItemButton:hover,
.main-userWidget-dropDownMenuItemButton:hover,
.main-contextMenu-menuItemButton[aria-expanded='true'] {
  background-color: rgba(var(--spice-rgb-text), 0.1) !important;
  backdrop-filter: luminosity;
}

.main-contextMenu-disabled:hover {
  background-color: transparent !important;
}

.main-contextMenu-menuItem,
._60cb742e518d084c3c959007b9463b51-scss > li {
  margin: 1px 1px;
}

.main-contextMenu-menuItem:first-child,
._60cb742e518d084c3c959007b9463b51-scss > :first-child {
  margin: 1px 1px 1px;
}

.main-contextMenu-menuItem:last-child {
  margin: 1px 1px 1px;
}

._60cb742e518d084c3c959007b9463b51-scss > :last-child {
  margin: 1px 1px 1px;
}

.main-contextMenu-menu,
._60cb742e518d084c3c959007b9463b51-scss {
  border-radius: var(--border-radius-1);
  box-shadow: 0 0 2px var(--spice-layer-shadow) !important;
  background-color: var(--spice-card);
}

.queue-tabBar-dropdownItemLink {
  color: var(--spice-text) !important;
}

/* buttons */

.main-genericButton-buttonActive::after {
  background-color: var(--spice-accent) !important;
}

.main-genericButton-buttonActive {
  color: var(--spice-accent) !important;
}

.ButtonInner-md {
  width: auto;
}

.x-downloadButton-button,
.x-filterBox-expandButton,
.x-contributorButton-ContributorButton,
.x-filterBox-clearButton,
.playlist-inlineSearchBox-clearButton {
  color: var(--spice-subtext) !important;
}

.IAyWaeDamLJLjxuPeVKw {
  color: var(--spice-text) !important;
}

.icon,
.main-navBar-icon {
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  margin: auto;
  display: block;
}

.main-addButton-active:focus,
.main-addButton-active:hover,
.main-addButton-active {
  color: var(--spice-accent) !important;
}

.main-navBar-navBarLink .main-navBar-icon path,
.icon > svg,
.x-searchInput-searchInputIconContainer path,
.show-episodeBlock-playerActions svg,
.main-playButton-PlayButton polygon,
.main-playButton-PlayButton rect {
  display: none !important;
}

.home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_home_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_home_24_filled.svg');
  background-color: var(--spice-accent) !important;
}

.search-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_search_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.search-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_search_24_filled.svg');
  background-color: var(--spice-accent) !important;
}

.collection-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_library_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.collection-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_library_24_filled.svg');
  background-color: var(--spice-accent) !important;
}

.main-navBar-navBarLink[href='/lyrics-plus'] > .collection-icon,
.main-yourLibraryX-navLink[href='/lyrics-plus'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_slide_text_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/lyrics-plus'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/lyrics-plus'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_slide_text_24_filled.svg');
  background-color: var(--spice-accent) !important;
}

.main-navBar-navBarLink[href='/marketplace'] > .collection-icon,
.main-yourLibraryX-navLink[href='/marketplace'] > .home-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_app_store_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.main-navBar-navBarLink[href='/marketplace'] > .collection-active-icon,
.main-yourLibraryX-navLink[href='/marketplace'] > .home-active-icon {
  -webkit-mask-image: url('https://nimsandu.github.io/spicetify-bloom/assets/fluentui-system-icons/ic_fluent_app_store_24_filled.svg');
  background-color: var(--spice-accent) !important;
}
/* ... */

